inclusão da entidade intenção de venda

--- a/picareta.car/Administracao/src/admin.picareta/Admin.Picareta.csproj
+++ b/picareta.car/Administracao/src/admin.picareta/Admin.Picareta.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\src\core.picareta\Core.Picareta.csproj" />
+  </ItemGroup>
+
 </Project>
