--- a/picareta.car/Administracao/src/admin.picareta/Admin.Picareta.csproj
+++ b/picareta.car/Administracao/src/admin.picareta/Admin.Picareta.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\..\Core\src\core.picareta\Core.Picareta.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.6.2" />
+  </ItemGroup>
+
 </Project>
